[package]
name = "OWDL"
version = "0.1.0"
edition = "2021"
authors = ["AWDL Rust Implementation"]
description = "Rust implementation of Apple Wireless Direct Link (AWDL) protocol"
license = "MIT"

[dependencies]
# Network and protocol handling
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
bytes = { version = "1.0", features = ["serde"] }

# Serialization and data structures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
num_cpus = "1.0"
bincode = "1.3"
byteorder = "1.4"

# Networking
pcap = "1.0"
pnet = "0.34"
rawsock = "0.2"

# Cryptography
ring = "0.17"
rand = "0.8"

# Utilities
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Collections and data structures
hashbrown = "0.14"
indexmap = "2.0"

# Async runtime
async-trait = "0.1"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt", "handleapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lib]
name = "awdl_rust"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
