[package]
name = "nexus802"
version = "0.1.0"
edition = "2021"
authors = ["Marco <marco@example.com>"]
description = "Multi-Tier IEEE 802.11 Protocol Implementation for Windows"
license = "MIT"
keywords = ["802.11", "wifi", "monitor", "ndis", "wdi"]
categories = ["network-programming", "hardware-support"]

[features]
default = ["bridge-wsl2"]
# Tier 2: WSL2 Bridge backend (recommended)
bridge-wsl2 = []
# Tier 2: Vendor driver backends
vendor-commview = ["libloading"]
vendor-acrylic = ["libloading"] 
vendor-omnipeek = ["libloading"]
# Tier 1: NDIS Filter driver backend (advanced)
ndis-filter = ["winapi"]
# Development and testing
mock-backend = []

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
byteorder = "1.4"

# Network and frame processing
bytes = { version = "1.0", features = ["serde"] }
pcap-file = "1.1"

# Error handling and logging
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam = "0.8"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi", "securitybaseapi", "winnt", "handleapi",
    "fileapi", "namedpipeapi", "synchapi", "memoryapi", "ioapiset"
], optional = true }
libloading = { version = "0.8", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lib]
name = "nexus802"
path = "src/lib.rs"

[[bin]]
name = "nexus802-daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "nexus802-cli"
path = "src/bin/cli.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
